--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ section {
     flex-direction: column;
     /* align-items: center; */
     max-width: 35em;
+    box-shadow: hsla(217, 45%, 22%, 0.055) 0 0 1em 10px;
 }
 
 img {
